test/tests/chapter_00/valid/comma/comma_paren_args.c
int putchar(int c);

int main(void) {
    putchar((65, 66));
    putchar(10);
    return 0;
}
